# projects-rd-cosas

./: .Rprofile  .gitignore  .lintr  DESCRIPTION  NAMESPACE  README.md  index.py  model.yaml  molgenis-cosas.code-workspace  package.json  requirements.txt
R/: _load.R  build_data.R  build_emx.R  cosas_01_main.R  cosas_02_lookups.R  cosas_99_generate.R  cosas_emx.R  cosas_mapping.R  emx_build.R  gene_list.R  generator.R  mapping_cosas.R  mapping_cosasportal.R  mapping_cosasrefs.R  utils_benchmarks.R  utils_fetch_fairgenomes.R  utils_generator.R  utils_mapping.R  utils_molgenis.R  utils_move_files.R  utils_write_emx.R  utils_yaml_convert.R  viz_sorta.R  write_emx.R  yaml_to_emx.R
_archive/: cosas_03_mappings.R  tests_gene_list.R  tests_id_patterns.R
app-vue/: .eslintrc.js  .gitignore  babel.config.js  package.json  vue.config.js
cosas/: admin_update_jobs.py  admin_update_user_module.py  alissa.py  alissa.sh  cartagenia_query.py  consent_mappings.py  consent_prep_raw_data.py  cosas_consent.py  cosas_daily_mappings.py  cosas_daily_preparation.py  cosas_delete_data_WARNING.py  cosas_mappings.py  cosasreports_attribute_summary.py  cosasreports_jobs.py  data_filemetatdata_processing.py  data_test_code_coverage.py  data_vip_samplesheet.py  files_daily_processing.py  files_new_data_prep.py  requirements.txt  setup_emx2.py  setup_umdm.py  test_new_patient_mappings.py  (+2 more)
cosastools/: LICENSE  README.md  package.json  pyproject.toml
cosastools/src/cosastools/: __init__.py  __version__.py  alissa.py  cartagenia.py  datatable.py  logger.py  molgenis.py  utils.py
dev/: dev.R  (+2 more)
(+231 files in other folders)
