[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cosastools"
authors = [{ name = "David Ruvolo" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">3.9"
keywords = ["datbases", "data managment"]
dependencies = [
  "requests>=2.28.1",
  "pytz>=2022.6",
  "molgenis-py-client>=2.4.0",
  "numpy>=1.23.5",
]

[project.urls]
Home = "https://github.com/molgenis/molgenis-cosas"
